# SAP2-Compiler

./: .gitignore  CMakeLists.txt  README.md  delay.asm  main.c  test.asm
Executables/: sap2-compiler-linux  sap2-interpreter-linux-x86-64
Exemplos/: Delay.asm  Operacoes.asm  Sinal_de_Transito.asm
Interpreter/: ErrorCodes.h  environment.c  environment.h  interpreter.c  interpreter.h
Interpreter/Analysis/: parser.c  parser.h  tokenizer.c  tokenizer.h
Interpreter/Instructions/: Instructions.c  Instructions.h  InstructionsFunctions.c  InstructionsFunctions.h
Interpreter/Runtime/: evaluate.c  evaluate.h
Interpreter/Utils/: Utils.c  Utils.h
private-tests/: a9ex1.asm  a9ex2.asm  a9ex3.asm
tests/: a9ex3.asm
